update to logic

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>RSP-Multiplayer</title>
+<title>RPS-Multiplayer</title>
 <link href="Assets/css/reset.css" rel="stylesheet" type="text/css">
 <link href="Assets/css/style.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Limelight|PT+Mono" rel="stylesheet">
