--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 <title>RPS-Multiplayer</title>
 <link href="Assets/css/reset.css" rel="stylesheet" type="text/css">
 <link href="Assets/css/style.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Limelight|PT+Mono" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Limelight|PT+Mono1" rel="stylesheet">
 <script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="assets/js/game.js"></script>
